<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:onClick="capturar"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:singleLine="true"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/digite_um_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cores" />

    <CheckBox
        android:id="@+id/chkVerde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verde" />

    <CheckBox
        android:id="@+id/chkVermelho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vermelho" />

    <CheckBox
        android:id="@+id/chkBranca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/branco" />

    <Button
        android:id="@+id/capturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="capturar"
        android:text="@string/capturar"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/limpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limpar"
        android:text="@string/limpar"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C8C8C"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/corVerdeSel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:enabled="false" />

        <TextView
            android:id="@+id/corVermelhoSel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/black"
            android:enabled="false" />

        <TextView
            android:id="@+id/corBrancaSel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:enabled="false" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <ImageView
        android:id="@+id/figura"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagem"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>